objects/Work_Team_Permission__c.object
<CustomObject>
    <description>Store the permission set, queues and user roles assigned to a work team, this object is used to handle the security.</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the permission is active or not for the work team.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Set_API_Name__c</fullName>
        <description>Used to store the API Name of a permission set assigned to a work team.</description>
        <externalId>true</externalId>
        <label>Permission Set API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_API_Name__c</fullName>
        <description>It is used to store the API name of the queue related to the work team.</description>
        <externalId>true</externalId>
        <label>Queue API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Function__c</fullName>
        <description>Used to stores the function that the queue covers for the work team, like reviewer, approver.
It is used to identify the proper queue in the RAV process.</description>
        <label>Queue Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approver</fullName>
                </value>
                <value>
                    <fullName>Reviser</fullName>
                </value>
                <value>
                    <fullName>Case back office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_API_Name__c</fullName>
        <description>Used to store the API name of a role available to be assigned to a member of a team in the Security GUI used to configure Work Team Members.</description>
        <externalId>true</externalId>
        <label>Role API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Team__c</fullName>
        <description>This field is used to store the assignation of a permission with a work team that it belongs to.</description>
        <label>Work Team</label>
        <referenceTo>WorkTeam__c</referenceTo>
        <relationshipLabel>Work Team Permissions</relationshipLabel>
        <relationshipName>Work_Team_Permissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Team Permission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>WTP-{0000}</displayFormat>
        <label>Work Team Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Team Permissions</pluralLabel>
    <recordTypes>
        <fullName>Permissions_by_work_team</fullName>
        <active>true</active>
        <description>Used to configure the permission sets active by work team.</description>
        <label>Permissions by work team</label>
    </recordTypes>
    <recordTypes>
        <fullName>Queues_by_work_team</fullName>
        <active>true</active>
        <description>Record type to configure the queues assigned by work team.</description>
        <label>Queues by work team</label>
    </recordTypes>
    <recordTypes>
        <fullName>Roles_active_by_work_team</fullName>
        <active>true</active>
        <description>Used to configure the user roles available for the work team.</description>
        <label>Roles active by work team</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>